<resources>
    <string name="app_name">Yesable</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_empty">EmptyActivity</string>
    <string name="title_activity_start_uiactivity">StartUIActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_sign_select">SignSelectActivity</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="title_activity_onboarding_pager_adapter">OnboardingPagerAdapter</string>
    <string name="title_activity_onboarding1">OnboardingActivity1</string>
    <string name="prompt_year">취득년도</string>
    <string name="title_activity_recruitment_detail1">Recruitment_Detail_Activity1</string>
    <string name="title_activity_apply_list">Apply_List_Activity</string>
    <string name="title_activity_main">Main_Activity</string>

    <string name="title_dashboard">Dashboard</string>

    <string name="title_chat">채팅</string>
    <string name="title_home">홈</string>
    <string name="title_recruit">채용공고</string>
    <string name="title_notification">알림</string>
    <string name="title_mypage">마이페이지</string>


</resources>