<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navi_main"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.yesable.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/recruitFragment"
        android:name="com.example.yesable.RecruitFragment"
        android:label="@string/title_recruit"
        tools:layout="@layout/fragment_recruit" />

    <fragment
        android:id="@id/chatFragment"
        android:name="com.example.yesable.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/notificationFragment"
        android:name="com.example.yesable.NotificationFragment"
        android:label="@string/title_notification"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/myPageFragment"
        android:name="com.example.yesable.MyPageFragment"
        android:label="@string/title_mypage"
        tools:layout="@layout/fragment_my_page" />
</navigation>